<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConvertActivity">

        <Switch
            android:id="@+id/round_up_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:text="@string/round_up_value"
            android:textSize="24sp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck"
            android:layout_marginRight="16dp" />

        <Button
            android:id="@+id/convert_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/convert"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/round_up_value" />



        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            tools:text="Result : 0.0"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/convert_button"
            app:layout_constraintTop_toBottomOf="@id/convert_button"
            android:textSize="34sp" />

        <Button
            android:id="@+id/retake_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_again"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_text"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>